--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 
   <!-- Footer Section -->
   <footer>
-    <p>&copy; 2025 Your Name. All rights reserved.</p>
+    <p>&copy; 2025 Javan Mesh. All rights reserved.</p>
   </footer>
 </body>
 </html>
